<resources>

    <string name="small_screen_size">Small Screen Size Layout</string>
    <string name="normal_screen_size">Normal Screen Size Layout</string>

    <string name="app_name">Kigga</string>

    <string name="title_home">Home</string>
    <string name="title_bet">Wetten</string>
    <string name="title_table">Tabelle</string>
    <string name="title_more">Mehr</string>

    <string name="point_cur_season">Points: %s</string>
    <string name="points_alltime">Points(all time)</string>
    <string name="username">Username</string>
    <string name="favourite_club">Favourite Club</string>

    <string name="Mon">Montag</string>
    <string name="Tue">Dienstag</string>
    <string name="Wed">Mittwoch</string>
    <string name="Thr">Donnerstag</string>
    <string name="Fri">Freitag</string>
    <string name="Sat">Samstag</string>
    <string name="Sun">Sonntag</string>


    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="no_rank">0.</string>
    <string name="zero_float">0.</string>
    <string name="default_hastag">#BuLi</string>
    <string name="arrow_">&amp;gt</string>

    <string name="mode_label">Optik</string>
    <string name="mode_radio_system">Systemeinstellung</string>
    <string name="mode_radio_dark">Dunkel</string>
    <string name="mode_radio_light">Hell</string>
    <string name="mode_dialog_title">Wie soll deine App aussehen?</string>

    <string name="twitter_hashtag_link">https://twitter.com/hashtag/%s?src=hashtag_click</string>
    <string name="seasonString">Saison %d/%d</string>
    <string name="matchdayString">%d. Spieltag</string>
    <string name="spieltag">Spieltag</string>
    <string name="clock">%sUhr</string>
    <string name="twitter_hashtag_template">#%s%s</string>
    <string name="dialog_title_club_chooser">Lieblingsverein</string>
    <string name="cancel">abbrechen</string>
    <string name="ok">OK</string>
    <string name="no_club">keiner</string>
    <string name="dialog_message_club_chooser">Wähle deinen Lieblingsverein aus. Du kannst ihn jederzeit ändern.</string>
    <string name="no_internet_title">Foul !!!</string>
    <string name="no_internet_message">Wir können leider keine Verbindung zum Server herstellen. Schaue, ob du eine funktionierende Internetverbindung hast und versuche es erneut.</string>
    <string name="kickoff">Anpfiff:\u0020</string>
    <string name="seasonStatsTemplate">%d%(%d)</string>
    <string name="pointsCalculationTemplate">= %d Punkte</string>
    <string name="choose_label">auswählen</string>
    <string name="your_club">Dein Club:\u0020</string>
    <string name="support_mail">kigga.feedback@gmail.com</string>
    <string name="feedback_mail_start">Hey,\nich habe folgendes Feedback oder Problem…\n\n</string>
    <string name="contact">Kontakt</string>
    <string name="no_data">noch keine Daten</string>
    <string name="ref_openligadb">Diese App verwendet als Quelle die kostenfreie Datenbank: OpenLigaDB. Mehr Informationen unter: www.openligadb.de</string>
    <string name="data_protection">Die Application erhebt keinerlei personenbezogene Daten. Alle Daten bleiben lokal auf de Gerät gespeichert. Es werden keine Daten hochgeladen oder an Dritte weitergegeben.</string>
    <string name="data_protection_header">Datenschutz:</string>
    <string name="next_match">Gegner:</string>
    <string name="empty_sign">-</string>
    <string name="double_dot">:</string>
    <string name="season">Saison</string>
    <string name="match_result_empty">-:-(-:-)</string>
    <string name="match_canceled">abgs.</string>
    <string name="correct_result_string">richtiges Ergebnis</string>
    <string name="correct_outcome_string">richtiger Ausgang</string>
    <string name="wrong_string">falsch</string>

</resources>
