<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jgeig001.kigga.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bet"
        android:name="com.jgeig001.kigga.ui.bet.BetFragment"
        android:label="@string/title_bet"
        tools:layout="@layout/fragment_bet" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.jgeig001.kigga.ui.table.TableFragment"
        android:label="@string/title_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.jgeig001.kigga.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>