<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="moreviewmodel"
            type="com.jgeig001.kigga.ui.more.MoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- fav club -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/more_favouriteClubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/your_club"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/more_favouriteClub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/more_selec_fav_btn"
                    app:layout_constraintTop_toTopOf="@+id/more_selec_fav_btn" />

                <Button
                    android:id="@+id/more_selec_fav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corners_green"
                    android:elevation="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/choose_label"
                    android:textColor="?attr/light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/more_favouriteClubLabel" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/nightModel_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:text="Displaymode:"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/displayMode_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/corners_green"
                    android:onClick="onOpenDisplayModeAlertDialog"
                    android:text="Ändern"
                    android:textColor="?attr/light" />

            </LinearLayout>

            <!-- email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/feedback_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/adaptive_light"
                    android:background="@drawable/corners_blue"
                    android:text="@string/contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/support_mail" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/comfortaa_light"
                    android:lineSpacingMultiplier="1.1"
                    android:text="@string/ref_openligadb" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/data_protection_header"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_light"
                    android:lineSpacingMultiplier="1.05"
                    android:text="@string/data_protection"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>