<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.jgeig001.kigga.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/favouriteClubLabel"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginBottom="10dp"
            android:text="@string/your_club"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/table3Linearlayout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/favouriteClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:paddingStart="2dp"
            android:paddingEnd="0dp"
            android:singleLine="false"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/favouriteClubLabel"
            app:layout_constraintStart_toEndOf="@+id/favouriteClubLabel"
            app:layout_constraintTop_toTopOf="@+id/favouriteClubLabel" />

        <Button
            android:id="@+id/selec_fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/corners_green"
            android:elevation="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/choose_label"
            android:textColor="?attr/light"
            app:layout_constraintBottom_toBottomOf="@+id/favouriteClub"
            app:layout_constraintStart_toEndOf="@+id/favouriteClub"
            app:layout_constraintTop_toTopOf="@+id/favouriteClub" />

        <LinearLayout
            android:id="@+id/table3Linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selec_fav_btn">

            <View
                android:layout_width="165dp"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="?attr/colorPrimary_inverted" />

            <include
                android:id="@+id/table3_1st"
                layout="@layout/include_mini_table_row"
                app:tableElement="@{viewmodel.miniTableLiveDataObjects[0]}" />

            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="?attr/colorPrimary_inverted" />

            <include
                android:id="@+id/table3_2nd"
                layout="@layout/include_mini_table_row"
                app:tableElement="@{viewmodel.miniTableLiveDataObjects[1]}" />

            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="?attr/colorPrimary_inverted" />

            <include
                android:id="@+id/table3_3rd"
                layout="@layout/include_mini_table_row"
                app:tableElement="@{viewmodel.miniTableLiveDataObjects[2]}" />

            <View
                android:layout_width="165dp"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="?attr/colorPrimary_inverted" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/table3Linearlayout"
            app:layout_constraintTop_toTopOf="@+id/table3Linearlayout"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/nextOpponentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:singleLine="false"
                android:text="@string/next_match" />

            <TextView
                android:id="@+id/nextMatch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LightFontStyle"
                android:text="@{viewmodel.nextOpponent[0]}" />

            <TextView
                android:id="@+id/nextMatch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LightFontStyle"
                android:text="@{viewmodel.nextOpponent[1]}" />

            <TextView
                android:id="@+id/nextMatch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LightFontStyle"
                android:text="@{viewmodel.nextOpponent[2]}" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>