<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.jgeig001.kigga.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- ProgressBar that represents a total of 100% -->
            <ProgressBar
                android:id="@+id/chart_black"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/pie_chart_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/chart_green"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/pie_chart_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/chart_blue"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/pie_chart_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/green_dot"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:background="@drawable/dot"
                    android:backgroundTint="@color/green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/green_dot"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/correctResultabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_result_string"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/correct_result_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/correct_result_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/correct_result_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/correct_result_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp">

                <View
                    android:id="@+id/blue_dot"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:background="@drawable/dot"
                    android:backgroundTint="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/blue_dot"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/correctOutcomeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_outcome_string"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/correct_outcome_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/correct_outcome_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/correct_outcome_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/correct_outcome_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <View
                    android:id="@+id/black_dot"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:background="@drawable/dot"
                    android:backgroundTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/black_dot"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/wrongLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wrong_string"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/wrong_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/wrong_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/wrong_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/wrong_percentage"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>